# vocab-builder-ui

./: .env  .gitignore  .prettierrc.json  README.md  append-target-triple.js  developerID_application.cer  index.html  move_python_files.sh  net.midnightjava.vocabbuilder.plist  package-lock.json  package.json  rename_appimage_file.sh  vite.config.js  vocab-builder.plist
data/: default_langs.json  es_en_vocab.json  it_en_exported_words.csv  it_en_vocab.json.bk  parts_of_speech.json
initial-data/: __vocab.json  default_langs.json  en_en_vocab.json  parts_of_speech.json
src/: App.vue  main.js
src-tauri/: .env  .env.production  .gitignore  Cargo.toml  tauri.conf.json  tree.out
src-tauri/data/: fr_en_vocab.json  it_ar_vocab.json  it_en_vocab.csv  it_en_vocab.json  it_en_vocab.json_imported  parts_of_speech.default.json  test_vocab.csv
src-tauri/src/: main.rs
src/assets/: style.css
src/components/: UseFetch.vue  fetch.js
src/views/: AddVocab-old.vue  AddVocab.vue  AvailableLanguagesView.vue  FlashCardView.vue  PartsOfSpeechView.vue  SettingsView.vue  VocabTableView.vue
