[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mark Leone"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[build]
windows_subsystem = "windows"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "path-all", "shell-execute", "fs-all", "http-all", "shell-sidecar", "process-command-api", "devtools"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dotenvs = "0.1.0"
log = "0.4"

# Add winapi dependency only for Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" }

[features]
default = []
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "app"
path = "./src/main.rs"
windows_subsystem = "windows"

#[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!


