[package]
name = "vocab_builder"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mark Leone"]
license = ""
repository = ""
default-run = "vocab_builder"
edition = "2021"
rust-version = "1.60"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[build]
windows_subsystem = "windows"

[dependencies]
tokio = { version = "=1.39.3", features = ["rt", "rt-multi-thread"] }
bytemuck = "=1.16.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=1.8.0", features = [ "path-all", "shell-execute", "fs-all", "http-all", "shell-sidecar", "devtools" ] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dotenvs = "0.1.0"
log = "0.4"
env_logger = "0.9"

# Add winapi dependency only for Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" }

[features]
default = []
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "vocab_builder"
path = "./src/main.rs"
windows_subsystem = "windows"

#[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!


